[gd_scene load_steps=9 format=3 uid="uid://dwqlcg2c06x7"]

[ext_resource type="Texture2D" uid="uid://b5trt3i877woh" path="res://sprites/WhaleLevel.png" id="1_gn26o"]
[ext_resource type="Script" uid="uid://br78hmutlmdb0" path="res://scenes/Level_1_Boss.gd" id="1_obacn"]
[ext_resource type="PackedScene" uid="uid://droi5otfpdguu" path="res://scenes/WhaleBoss.tscn" id="2_rppgv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rppgv"]
size = Vector2(628, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_obacn"]
size = Vector2(662, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rb64a"]
size = Vector2(20, 383)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_41ab6"]
size = Vector2(20, 390)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rb64a"]
bg_color = Color(0.8873464, 0, 0.15228236, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Level_1_Boss" type="Node2D"]
script = ExtResource("1_obacn")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("1_gn26o")

[node name="ArenaWalls" type="StaticBody2D" parent="."]

[node name="Top" type="CollisionShape2D" parent="ArenaWalls"]
position = Vector2(-3, -171)
shape = SubResource("RectangleShape2D_rppgv")

[node name="Bottom" type="CollisionShape2D" parent="ArenaWalls"]
position = Vector2(8, 172)
shape = SubResource("RectangleShape2D_obacn")

[node name="Left" type="CollisionShape2D" parent="ArenaWalls"]
position = Vector2(-298, 0.5)
shape = SubResource("RectangleShape2D_rb64a")

[node name="Right" type="CollisionShape2D" parent="ArenaWalls"]
position = Vector2(297, -2)
shape = SubResource("RectangleShape2D_41ab6")

[node name="PlayerSpawn" type="Marker2D" parent="."]
position = Vector2(0, 105)

[node name="BossSpawn" type="Marker2D" parent="."]
position = Vector2(0, -80)

[node name="WhaleBoss" parent="BossSpawn" instance=ExtResource("2_rppgv")]

[node name="BossUI" type="CanvasLayer" parent="."]

[node name="BossBar" type="TextureProgressBar" parent="BossUI"]
offset_left = -55.0
offset_top = -162.0
offset_right = -15.0
offset_bottom = -122.0
scale = Vector2(2.3620892, 0.37979478)
fill_mode = 1

[node name="Panel" type="Panel" parent="BossUI/BossBar"]
layout_mode = 0
offset_top = 15.798006
offset_right = 40.0
offset_bottom = 55.798004
theme_override_styles/panel = SubResource("StyleBoxFlat_rb64a")
